--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -36,8 +36,6 @@ jobs:
 
   release-docker:
     runs-on: ubuntu-latest
-    env:
-      ENDPOINT: https://releases.cortezaproject.org/files
     steps:
       - run: echo "BUILD_VERSION=${GITHUB_REF#refs/tags/}" >> $GITHUB_ENV
       - uses: actions/checkout@v2
@@ -48,8 +46,7 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       - run: |
           docker build \
-            --build-arg CORTEZA_SERVER_PATH="${{ env.ENDPOINT }}/corteza-server-${{ env.BUILD_VERSION }}-linux-amd64.tar.gz" \
-            --build-arg CORTEZA_WEBAPP_PATH="${{ env.ENDPOINT }}/corteza-webapp-${{ env.BUILD_VERSION }}.tar.gz" \
+            --build-arg VERSION="${{ env.BUILD_VERSION }}" \
             -t cortezaproject/corteza:${{ env.BUILD_VERSION }} .
         if: ${{ !env.ACT }}
       - run: docker push cortezaproject/corteza:${{ env.BUILD_VERSION }}
